Added the foundation for comments, and the ability to look at individual stories. Also gave users their own datatype, so the database has been reworked to be a tad nicer.

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <ul id="story-list">
     {% for story in stories %}
       <li class="story">
-        <h2>{{ story.title }}</h2>
+        <h2><a href="/stories/{{ story.id }}/">{{ story.title }}</a></h2>
         <div class="story-content">
           {{ story.body|safe }}
         </div>
