--- a/templates/story.html
+++ b/templates/story.html
@@ -21,6 +21,10 @@
       Comment<br>
       <textarea name="body"></textarea>
     </label><br>
+    <label>
+      Comment Reply (optional)<br>
+      <input type="number" name="reply_comment" />
+    </label><br>
     <input type="submit" value="Submit" />
   </form>
 {% endblock %}
