Added foundation to the project, and will next start implementing it.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Stories</title>
+    <link rel="stylesheet" href="/static/css/foundation.css">
     <link rel="stylesheet" href="/static/styles.css">
   </head>
   <body>
