--- a/templates/header.html
+++ b/templates/header.html
@@ -1,11 +1,15 @@
 <header>
-  <a id="logo" href="/">Stories DB</a>
-  <ul id="nav">
-    <li><a href="/">Home</a></li>
-    <li><a href="/stories/">Stories</a></li>
-    <li><a href="/add_story/">Add a story</a></li>
-  </ul>
-  <form action="/search" method="POST" id="search">
-    <input name="search-val" type="text" placeholder="search" />
-  </form>
+  <nav class="top-bar" data-topbar role="navigation">
+    <ul class="title-area">
+      <li><a id="logo" href="/">Stories DB</a></li>
+      <li class="toggle-topbar menu-icon"><a href="#"></a></li>
+    </ul>
+    <section class="top-bar-section">
+      <ul id="nav" class="right">
+        <li><a href="/">Home</a></li>
+        <li><a href="/stories/">Stories</a></li>
+        <li><a href="/add_story/">Add a story</a></li>
+      </ul>
+    </section>
+  </nav>
 </header>
