--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,9 @@
 <header>
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
-      <li><a id="logo" href="/">Stories DB</a></li>
-      <li class="toggle-topbar menu-icon"><a href="#"></a></li>
+      <li><a href="/">Stories DB</a></li>
+      <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+
     </ul>
     <section class="top-bar-section">
       <ul id="nav" class="right">
@@ -12,4 +13,9 @@
       </ul>
     </section>
   </nav>
+  <img src="/static/img/logo-wire.png" id="logo" />
+  <h1 id="title">
+    Stories<br>
+    <small>Getting more done after 2 AM...</small>
+  </h1>
 </header>
