--- a/templates/header.html
+++ b/templates/header.html
@@ -13,9 +13,11 @@
       </ul>
     </section>
   </nav>
-  <img src="/static/img/logo-wire.png" id="logo" />
-  <h1 id="title">
-    Stories<br>
-    <small>Getting more done after 2 AM...</small>
-  </h1>
+  <a href="/">
+    <img src="/static/img/logo-wire.png" id="logo" />
+    <h1 id="title">
+      Stories<br>
+      <small>Getting more done after 2 AM...</small>
+    </h1>
+  </a>
 </header>
