--- a/templates/story.html
+++ b/templates/story.html
@@ -10,7 +10,7 @@
         Username:
         <input type="text" name="author" />
       </label>
-      <input type="submit" value="Upvote" />
+      <input type="submit" value="Upvote" class="button" />
     </form>
   </div>
   
@@ -33,6 +33,7 @@
       Comment Reply (optional)<br>
       <input type="number" name="reply_comment" />
     </label><br>
-    <input type="submit" value="Submit" />
+    <input type="submit" value="Submit" class="button" />
+    <input type="reset" value="Cancel" class="button" />
   </form>
 {% endblock %}
