--- a/templates/add_story.html
+++ b/templates/add_story.html
@@ -14,6 +14,6 @@
       Content<br>
       <textarea name="body"></textarea><br>
     </label>
-    <input type="submit" value="Submit" />
+    <input type="submit" value="Submit" class="button" />
   </form>
 {% endblock %}
