--- a/templates/comments.html
+++ b/templates/comments.html
@@ -16,7 +16,7 @@
             <input type="text" name="author" />
           </label>
           <input type="hidden" name="comment" value="{{comment.id}}" />
-          <input type="submit" value="Upvote" />
+          <input class="button" type="submit" value="Upvote" />
         </form>
 
         {% if comment.comments is defined %}
