--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,11 @@
     <title>Stories</title>
     <link rel="stylesheet" href="/static/css/foundation.css">
     <link rel="stylesheet" href="/static/css/normalize.css">
+    <link rel="stylesheet" href="/static/css/quill.snow.css">
     <link rel="stylesheet" href="/static/css/styles.css">
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/quill.min.js"></script>
+    <script src="/static/js/app.js"></script>
   </head>
   <body>
     <div class="container">
@@ -16,7 +20,6 @@
     </div>
     
     <!-- Scripts -->
-    <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/foundation.min.js"></script>
     <script>
     $(document).foundation();
